--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "geolib": "^2.0.24",
     "import-glob-loader": "^1.1.0",
     "node-sass": "^4.8.3",
     "prop-types": "^15.6.1",
