--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "geolib": "^2.0.24",
     "import-glob-loader": "^1.1.0",
+    "lodash": "^4.17.5",
     "node-sass": "^4.8.3",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
